--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@solana/web3.js": "^1.98.2",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "tweetnacl": "^1.0.3"
   }
 }
