--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@bonfida/spl-name-service": "^3.0.10",
     "@solana/web3.js": "^1.98.2",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.5",
     "motion": "^12.11.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "simplex-noise": "^4.0.3",
