--- a/backend/minf-nft/package.json
+++ b/backend/minf-nft/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@solana/web3.js": "^1.98.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
