--- a/backend/minf-nft/package.json
+++ b/backend/minf-nft/package.json
@@ -12,12 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@metaplex-foundation/mpl-toolbox": "^0.10.0",
+    "@metaplex-foundation/umi": "^1.2.0",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
+    "@metaplex-foundation/umi-uploader-irys": "^1.2.0",
     "@solana/web3.js": "^1.98.2",
-    "cookie-parser": "^1.4.7",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10",
-    "uuid": "^11.1.0"
+    "multer": "^2.0.0",
+    "nodemon": "^3.1.10"
   }
 }
