--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@bonfida/spl-name-service": "^3.0.10",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
