--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@project-serum/anchor": "^0.26.0",
     "@solana/web3.js": "^1.98.2",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
