--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.5",
+    "lucide-react": "^0.525.0",
     "motion": "^12.11.0",
     "next": "15.3.2",
     "react": "^19.0.0",
